dev/POCO/TEST/POS/PTOK01.POC
/* Test for reaaally long tokens */
#pragma poco echo "expect>Success"

main()
{
int aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa=1;
int bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb = 2;

if (aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa == 1 &&
	bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb == 2)
	printf("Success");
else
	printf("Error");
}
