dev/POCO/TEST/NEG/NAMPER03.POC
/* Tests for some wierdly placed ampersands */
#pragma poco echo "expect>. where there should be a -> perhaps?"

struct foobar
	{
	int foo;
	char bar;
	} fb;

main()
{
int *pt;

pt = (&fb).foo;
puts("This shouldn't compile");
}
